@@ -1,3 +1,7 @@
+2011-09-31  Valek Filippov
+
+		* XLS: xls.parse didn't return page.type
+
 2011-09-30  Valek Filippov
 
 		* XLS: parse CellXF part of XF record.
